tests/tests/roundtrip/invalid/syntax/malformed_line/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: int(1..3)
  |      ^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: int(1..3)
  |      ^
Missing Domain

tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: int(1..3)
  |      ^
Missing <identifier>

tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: int(1..3)
  |      ^
Missing :

